# AuroraStudio-gui

./: README.md
ASGUI/: CMakeLists.txt
ASGUI/include/: ASGUIApp.hpp  CMainFrame.hpp
ASGUI/res/: ASGUI.APS
ASGUI/src/: ASGUIApp.cpp  CMainFrame.cpp
